# MaxCut

./: .clang-format  .gitignore  CMakeLists.txt
algorithms/: CMakeLists.txt
algorithms/impl/base/: graph.cpp  iterating.cpp  maxcut.cpp
algorithms/impl/bruteforce/: bruteforce.cpp
algorithms/impl/goemans-williamson/: goemans-williamson.cpp
algorithms/impl/half-optimal/: half-optimal.cpp
algorithms/include/maxcut/: bruteforce.hpp  goemans-williamson.hpp  graph.hpp  half-optimal.hpp  iterating.hpp  maxcut.hpp  weight.hpp
analyse/: Analyse.ipynb
cmake/: FindMOSEK.cmake
testing/: CMakeLists.txt
testing/generators/: CMakeLists.txt  gen_all_tests.sh  gen_random_graph.sh  large_cut.cpp  random_graph.cpp
testing/test_runner/: CMakeLists.txt  run_all_tests.sh  run_test_dir.sh  test_runner.cpp
testing/tests/biqmac/: Note.txt  biqmaclib.tex
testing/tests/biqmac/solutions/: ising.txt  rudy.txt
testing/tests/large_cut/size-100/: rand-1  rand-10  rand-100  rand-11  rand-12  rand-13  rand-14  rand-15  rand-16  rand-17  rand-18  rand-19  rand-2  rand-20  rand-21  rand-22  rand-23  rand-24  rand-25  rand-26  rand-27  rand-28  rand-29  rand-3  rand-30  rand-31  rand-32  rand-33  rand-34  rand-35  rand-36  rand-37  rand-38  rand-39  rand-4  rand-40  rand-41  rand-42  rand-43  rand-44  (+60 more)
testing/tests/large_cut/size-15/: rand-1  rand-10  rand-100  rand-11  rand-12  rand-13  rand-14  rand-15  rand-16  rand-17  rand-18  rand-19  rand-2  rand-20  rand-21  rand-22  rand-23  rand-24  rand-25  rand-26  rand-27  rand-28  rand-29  rand-3  rand-30  rand-31  rand-32  (+73 more)
tests/: CMakeLists.txt  main.cpp
(+3500 files in other folders)
